; ModuleID = '/home/carl/AnghaBench/openssl/crypto/dsa/extr_dsa_pmeth.c_pkey_dsa_paramgen.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/dsa/extr_dsa_pmeth.c_pkey_dsa_paramgen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*)* @pkey_dsa_paramgen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pkey_dsa_paramgen(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* null, i32** %6, align 8
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %11, align 8
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %7, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %26

17:                                               ; preds = %2
  %18 = call i32* (...) @BN_GENCB_new()
  store i32* %18, i32** %8, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = icmp eq i32* %19, null
  br i1 %20, label %21, label %22

21:                                               ; preds = %17
  store i32 0, i32* %3, align 4
  br label %60

22:                                               ; preds = %17
  %23 = load i32*, i32** %8, align 8
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %25 = call i32 @evp_pkey_set_cb_translate(i32* %23, %struct.TYPE_5__* %24)
  br label %27

26:                                               ; preds = %2
  store i32* null, i32** %8, align 8
  br label %27

27:                                               ; preds = %26, %22
  %28 = call i32* (...) @DSA_new()
  store i32* %28, i32** %6, align 8
  %29 = load i32*, i32** %6, align 8
  %30 = icmp eq i32* %29, null
  br i1 %30, label %31, label %34

31:                                               ; preds = %27
  %32 = load i32*, i32** %8, align 8
  %33 = call i32 @BN_GENCB_free(i32* %32)
  store i32 0, i32* %3, align 4
  br label %60

34:                                               ; preds = %27
  %35 = load i32*, i32** %6, align 8
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 2
  %38 = load i32, i32* %37, align 4
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = load i32*, i32** %8, align 8
  %46 = call i32 @dsa_builtin_paramgen(i32* %35, i32 %38, i32 %41, i32 %44, i32* null, i32 0, i32* null, i32* null, i32* null, i32* %45)
  store i32 %46, i32* %9, align 4
  %47 = load i32*, i32** %8, align 8
  %48 = call i32 @BN_GENCB_free(i32* %47)
  %49 = load i32, i32* %9, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %55

51:                                               ; preds = %34
  %52 = load i32*, i32** %5, align 8
  %53 = load i32*, i32** %6, align 8
  %54 = call i32 @EVP_PKEY_assign_DSA(i32* %52, i32* %53)
  br label %58

55:                                               ; preds = %34
  %56 = load i32*, i32** %6, align 8
  %57 = call i32 @DSA_free(i32* %56)
  br label %58

58:                                               ; preds = %55, %51
  %59 = load i32, i32* %9, align 4
  store i32 %59, i32* %3, align 4
  br label %60

60:                                               ; preds = %58, %31, %21
  %61 = load i32, i32* %3, align 4
  ret i32 %61
}

declare dso_local i32* @BN_GENCB_new(...) #1

declare dso_local i32 @evp_pkey_set_cb_translate(i32*, %struct.TYPE_5__*) #1

declare dso_local i32* @DSA_new(...) #1

declare dso_local i32 @BN_GENCB_free(i32*) #1

declare dso_local i32 @dsa_builtin_paramgen(i32*, i32, i32, i32, i32*, i32, i32*, i32*, i32*, i32*) #1

declare dso_local i32 @EVP_PKEY_assign_DSA(i32*, i32*) #1

declare dso_local i32 @DSA_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
